fix: scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -25,18 +25,18 @@ code {
 }
 
 *::-webkit-scrollbar {
-  height: 0;
-  width: 0.8rem;
+  height: 5px;
+  width: 5px;
 }
 
 *::-webkit-scrollbar-thumb {
   background-color: var(--primary-color);
-  width: 1rem;
-  height: 1rem;
+  width: 10px;
+  height: 10px;
   border-radius: 20px;
 }
 
 *::-webkit-scrollbar-track {
   background-color: rgb(255, 255, 255);
-  width: 1rem;
+  width: 10px;
 }
